--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -18,6 +18,13 @@ services:
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.API/Dockerfile
+
 volumes:
   postgres_catalog:
   postgres_basket:
+
