--- a/src/Services/Discount/Discount.gRPC/Discount.gRPC.csproj
+++ b/src/Services/Discount/Discount.gRPC/Discount.gRPC.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>9b28dac1-aa83-4b61-823e-b9516f127d3c</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
