--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -52,9 +52,11 @@ services:
       - ASPNETCORE_URLS=https://+:443;http://+:80
       - ConnectionStrings__Database=Server=basketdb;Port=5432;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true
       - ConnectionStrings__Redis=distributedcache:6379
+      - gRPCSettings__DiscountUrl=https://discount.grpc:443
     depends_on:
       - basketdb
       - distributedcache
+      - discount.grpc
     ports:
       - "6001:80"
       - "6061:443"
