Fix and Feature (Ordering): Fix Entity Configuration and Containerize and Orchestrate with Docker and Docker Compose.

--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server=localhost,1433;Database=OrderDb;User Id=sa;Password=Duccong29092003!;Encrypt=False;TrustServerCertificate=True"
+    "Database": "Server=localhost,1433;Database=OrderDb;User Id=sa;Password=123456@Aa;Encrypt=False;TrustServerCertificate=True"
   },
   "MessageBroker": {
     "Host": "amqp://localhost:5672",
