Feat (ApiGateway): Containerize and Orchestrate for Reverse Proxy.

--- a/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
+++ b/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>ccff68a7-6832-43e3-a141-46e99a3a2e19</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
